package app.domain.model;

public class Agent {
}
