@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class PublishAnnouncementUI{
}

class PublishAnnouncementController {
    + PublishAnnouncementControllerController(propertyRepository, AnnouncementRepository)
    + getProperty(property_type)
    + createAnnouncment(size,location,distance_from_the_city_center,\nprice,commission)

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getPropertyRepository()
    + getAnnouncementRepository()
}

class PropertyRepository{
    +getProperty()
}

class AnnouncementRepository{
    +getAnnouncement()
}

class Announcement{
    + Announcement(size,location,distance_from_the_city_center,\nprice,commission)
    +getProperty(property_type)
}

class Property{
  -float size
  -string location
  -float distance_from_the_city_center
  -float price
  -float commission
  +getPropertyType()
}



class Agent {
    -citizen card
    -tax number
    -address
    -phone number
    -agency
    +publishAnnouncement(size,location,distance_from_the_city_center,\nprice,commission)
}


Repositories -> Repositories : instance

PublishAnnouncementUI .> PublishAnnouncementController

PublishAnnouncementController .> Repositories : repositories

Repositories --> "1" PropertyRepository

PublishAnnouncementController ..> Property

PublishAnnouncementController ..> AnnouncementRepository : AnnouncementRepository

Repositories --> "1" AnnouncementRepository

AnnouncementRepository --> "*" Announcement

Announcement "1" --> "1" Property: property

PropertyRepository "1" --> "*"Property : property

'Organiza "1" --> "*" Task : tasks
Announcement --> Agent : publishedBy
@enduml